--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Maria Contractor | Data Analyst</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header id="home">
+    <nav>
+      <div class="nav-left">Maria Contractor</div>
+      <ul class="nav-right">
+        <li><a href="#about">About</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+      </ul>
+    </nav>
+    <div class="hero fade-in">
+      <img src="assets/profile.jpg" alt="Maria Contractor" class="profile-pic">
+      <h1>Hi, I'm Maria.</h1>
+      <p class="tagline">Data Analyst | Python | Power BI | SQL | R</p>
+    </div>
+  </header>
+
+  <section id="about" class="fade-in">
+    <h2>About Me</h2>
+    <p>
+      I'm a Data Science student at UCF, currently working as an Operations Analyst Intern at BNY Mellon.
+      My work focuses on building tools and analytics to drive smarter decisions through data. I specialize in Power BI, Python, SQL, and R.
+    </p>
+  </section>
+
+  <section id="experience" class="fade-in">
+    <h2>Experience</h2>
+    <div class="exp-card">
+      <h3>Operations Analyst Intern – BNY Mellon</h3>
+      <p>Used Power BI and Visio to optimize and automate global payment workflows.</p>
+    </div>
+    <div class="exp-card">
+      <h3>Data Analytics RA – UCF</h3>
+      <p>Built a real-time contact tracking system with Power BI to support faculty engagement.</p>
+    </div>
+  </section>
+
+  <section id="projects" class="fade-in">
+    <h2>Projects</h2>
+    <div class="project-grid">
+      <div class="project-card">
+        <h3>Branch Optimization Model</h3>
+        <p>Predicted best locations for bank branches using Python, R, and SQL.</p>
+      </div>
+      <div class="project-card">
+        <h3>Media Recommendation Engine</h3>
+        <p>Built a universal recommender system with PyTorch and matrix factorization.</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Maria Contractor | <a href="https://github.com/mcont55" target="_blank">GitHub</a> | <a href="mailto:macont55@gmail.com">Email</a></p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
