--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
         <li><a href="#about">About</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#projects">Projects</a></li>
+        <li><a href="#resume">Resume</a></li>
       </ul>
     </nav>
     <div class="hero fade-in">
       <img src="assets/profile.jpg" alt="Maria Contractor" class="profile-pic">
       <h1>Hi, I'm Maria.</h1>
-      <p class="tagline">Data Analyst | Python | Power BI | SQL | R</p>
+      <p class="tagline highlight">Data Science Enthusiast | Python | Power BI | SQL | R</p>
     </div>
   </header>
 
   <section id="about" class="fade-in">
     <h2>About Me</h2>
     <p>
-      I'm a Data Science student at UCF, currently working as an Operations Analyst Intern at BNY Mellon.
-      My work focuses on building tools and analytics to drive smarter decisions through data. I specialize in Power BI, Python, SQL, and R.
+      I'm a passionate Data Science student at UCF with a minor in Statistics. I thrive on transforming data into impactful solutions and currently work as an Operations Analyst Intern at BNY Mellon. Whether it's building dashboards in Power BI or exploring ML models in Python, I love applying analytical thinking to real-world problems.
     </p>
   </section>
 
@@ -36,11 +36,18 @@
     <h2>Experience</h2>
     <div class="exp-card">
       <h3>Operations Analyst Intern – BNY Mellon</h3>
-      <p>Used Power BI and Visio to optimize and automate global payment workflows.</p>
+      <p>Used Power BI and Microsoft Visio to optimize and automate global payment workflows.</p>
+      <p class="skills">Skills: Power BI, Workflow Mapping, Financial Systems, Operations Analytics</p>
     </div>
     <div class="exp-card">
       <h3>Data Analytics RA – UCF</h3>
       <p>Built a real-time contact tracking system with Power BI to support faculty engagement.</p>
+      <p class="skills">Skills: Power BI, Predictive Analytics, Real-Time Dashboards, Engagement Metrics</p>
+    </div>
+    <div class="exp-card">
+      <h3>Data & Research Intern – Limbitless Solutions</h3>
+      <p>Analyzed gamified training data for myoelectric prosthetics using R and wrote a manuscript on RL in educational gaming.</p>
+      <p class="skills">Skills: R, ggplot2, dplyr, Reinforcement Learning, Manuscript Writing</p>
     </div>
   </section>
 
@@ -50,19 +57,30 @@
       <div class="project-card">
         <h3>Branch Optimization Model</h3>
         <p>Predicted best locations for bank branches using Python, R, and SQL.</p>
+        <p class="skills">Skills: Python, R Studio, SQL, Financial Modeling, Geospatial Analysis</p>
       </div>
       <div class="project-card">
         <h3>Media Recommendation Engine</h3>
-        <p>Built a universal recommender system with PyTorch and matrix factorization.</p>
+        <p>Built a universal recommender system using PyTorch and matrix factorization to suggest personalized content.</p>
+        <p class="skills">Skills: PyTorch, Matrix Factorization, Data Pipelines, AI Personalization</p>
       </div>
     </div>
   </section>
 
+  <section id="resume" class="fade-in">
+    <h2>Resume</h2>
+    <p>You can download my latest resume here:</p>
+    <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View My Resume (PDF)</a>
+  </section>
+
   <footer>
-    <p>© 2025 Maria Contractor | <a href="https://github.com/mcont55" target="_blank">GitHub</a> | <a href="mailto:macont55@gmail.com">Email</a></p>
+    <p>© 2025 Maria Contractor |
+      <a href="https://github.com/mcont55" target="_blank">GitHub</a> |
+      <a href="mailto:macont55@gmail.com">Email</a> |
+      <a href="https://www.linkedin.com/in/maria-contractor" target="_blank">LinkedIn</a>
+    </p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
-
