--- a/index.html
+++ b/index.html
@@ -19,21 +19,26 @@
       </ul>
     </nav>
     <div class="hero fade-in">
-      <img src="assets/profile.jpg" alt="Maria Contractor" class="profile-pic">
-      <h1>Hi, I'm Maria.</h1>
-      <p class="tagline highlight">Data Science Enthusiast | Python | Power BI | SQL | R</p>
+      <img src="assets/profile.jpg" alt="Maria Contractor" class="profile-pic large">
+      <h1>Maria Contractor</h1>
+      <p class="tagline highlight">Data Science Enthusiast</p>
+      <p class="tagline">Python | Power BI | SQL | R | AI | Visualization</p>
+      <div>
+        <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View Resume (PDF)</a>
+        <a href="assets/maria_resume.pdf" class="resume-button download" download>Download Resume</a>
+      </div>
     </div>
   </header>
 
   <section id="about" class="fade-in">
-    <h2>About Me</h2>
+    <h2 style="text-align:center;">About Me</h2>
     <p>
-      I'm a passionate Data Science student at UCF with a minor in Statistics. I thrive on transforming data into impactful solutions and currently work as an Operations Analyst Intern at BNY Mellon. Whether it's building dashboards in Power BI or exploring ML models in Python, I love applying analytical thinking to real-world problems.
+      I'm a passionate Data Science student at UCF with a minor in Statistics. I thrive on transforming data into impactful solutions and currently work as an Operations Analyst Intern at BNY Mellon. I love using analytics to drive insight and creativity — whether it’s building interactive dashboards or modeling trends with code, I'm always exploring the intersection of logic and design.
     </p>
   </section>
 
   <section id="experience" class="fade-in">
-    <h2>Experience</h2>
+    <h2 style="text-align:center;">Experience</h2>
     <div class="exp-card">
       <h3>Operations Analyst Intern – BNY Mellon</h3>
       <p>Used Power BI and Microsoft Visio to optimize and automate global payment workflows.</p>
@@ -52,7 +57,7 @@
   </section>
 
   <section id="projects" class="fade-in">
-    <h2>Projects</h2>
+    <h2 style="text-align:center;">Projects</h2>
     <div class="project-grid">
       <div class="project-card">
         <h3>Branch Optimization Model</h3>
@@ -68,9 +73,12 @@
   </section>
 
   <section id="resume" class="fade-in">
-    <h2>Resume</h2>
-    <p>You can download my latest resume here:</p>
-    <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View My Resume (PDF)</a>
+    <h2 style="text-align:center;">Resume</h2>
+    <p style="text-align:center;">You can also view or download my resume below:</p>
+    <div style="text-align:center;">
+      <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View Resume (PDF)</a>
+      <a href="assets/maria_resume.pdf" class="resume-button download" download>Download Resume</a>
+    </div>
   </section>
 
   <footer>
