--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+  <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -6,6 +7,18 @@
   <title>Maria Contractor | Data Analyst</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    .typed-cursor {
+      font-weight: 300;
+      font-size: 1.2rem;
+      color: #6c63ff;
+      animation: blink 0.7s infinite;
+    }
+    @keyframes blink {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0; }
+    }
+  </style>
 </head>
 <body>
   <header id="home">
@@ -15,17 +28,17 @@
         <li><a href="#about">About</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="#resume">Resume</a></li>
       </ul>
     </nav>
     <div class="hero fade-in">
       <img src="assets/profile.jpg" alt="Maria Contractor" class="profile-pic large">
       <h1>Maria Contractor</h1>
+      <p class="tagline highlight"><span id="typed"></span></p>
       <p class="tagline highlight">Data Science Enthusiast</p>
       <p class="tagline">Python | Power BI | SQL | R | AI | Visualization</p>
       <div>
-        <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View Resume (PDF)</a>
-        <a href="assets/maria_resume.pdf" class="resume-button download" download>Download Resume</a>
+        <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View Resume</a>
+        <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇️</a>
       </div>
     </div>
   </header>
@@ -72,15 +85,6 @@
     </div>
   </section>
 
-  <section id="resume" class="fade-in">
-    <h2 style="text-align:center;">Resume</h2>
-    <p style="text-align:center;">You can also view or download my resume below:</p>
-    <div style="text-align:center;">
-      <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View Resume (PDF)</a>
-      <a href="assets/maria_resume.pdf" class="resume-button download" download>Download Resume</a>
-    </div>
-  </section>
-
   <footer>
     <p>© 2025 Maria Contractor |
       <a href="https://github.com/mcont55" target="_blank">GitHub</a> |
@@ -88,6 +92,22 @@
       <a href="https://www.linkedin.com/in/maria-contractor" target="_blank">LinkedIn</a>
     </p>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script>
+    new Typed('#typed', {
+      strings: ['Data Science Enthusiast', 'Creative Problem Solver', 'Visualization Junkie'],
+      typeSpeed: 50,
+      backSpeed: 30,
+      backDelay: 1800,
+      startDelay: 200,
+      loop: true
+    });
+  </script>
+  <script src="script.js"></script>
+</body>
+</html>
+
 
   <script src="script.js"></script>
 </body>
