--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
       <img src="assets/profile.jpg" alt="Maria Contractor" class="profile-pic large">
       <h1>Maria Contractor</h1>
       <p class="tagline highlight"><span id="typed"></span></p>
-      <p class="tagline highlight">Data Science Enthusiast</p>
       <p class="tagline">Python | Power BI | SQL | R | AI | Visualization</p>
       <div>
         <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View Resume</a>
-        <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇️</a>
+        <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇</a>
       </div>
     </div>
   </header>
