--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     .typed-cursor {
       font-weight: 300;
       font-size: 1.2rem;
-      color: #6c63ff;
+      color: #4a3aff;
       animation: blink 0.7s infinite;
     }
     @keyframes blink {
@@ -36,20 +36,20 @@
       <p class="tagline">Python | Power BI | SQL | R | AI | Visualization</p>
       <div>
         <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View Resume</a>
-        <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇</a>
+        <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇️</a>
       </div>
     </div>
   </header>
 
   <section id="about" class="fade-in">
-    <h2 style="text-align:center;">About Me</h2>
+    <h2>About Me</h2>
     <p>
       I'm a passionate Data Science student at UCF with a minor in Statistics. I thrive on transforming data into impactful solutions and currently work as an Operations Analyst Intern at BNY Mellon. I love using analytics to drive insight and creativity — whether it’s building interactive dashboards or modeling trends with code, I'm always exploring the intersection of logic and design.
     </p>
   </section>
 
   <section id="experience" class="fade-in">
-    <h2 style="text-align:center;">Experience</h2>
+    <h2>Experience</h2>
     <div class="exp-card">
       <h3>Operations Analyst Intern – BNY Mellon</h3>
       <p>Used Power BI and Microsoft Visio to optimize and automate global payment workflows.</p>
@@ -68,7 +68,7 @@
   </section>
 
   <section id="projects" class="fade-in">
-    <h2 style="text-align:center;">Projects</h2>
+    <h2>Projects</h2>
     <div class="project-grid">
       <div class="project-card">
         <h3>Branch Optimization Model</h3>
@@ -102,11 +102,6 @@
       loop: true
     });
   </script>
-  <script src="script.js"></script>
-</body>
-</html>
-
-
   <script src="script.js"></script>
 </body>
 </html>
