--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <p class="tagline">Python | Power BI | SQL | R | AI | Visualization</p>
       <div>
         <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View Resume</a>
-        <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇️</a>
+        <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇</a>
       </div>
     </div>
   </header>
