--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
       0%, 100% { opacity: 1; }
       50% { opacity: 0; }
     }
+    .project-extra {
+      display: none;
+      margin-top: 0.5rem;
+      font-size: 0.9rem;
+      color: #444;
+    }
+    .project-card.expanded .project-extra {
+      display: block;
+    }
   </style>
 </head>
 <body>
@@ -74,11 +83,13 @@
         <h3>Branch Optimization Model</h3>
         <p>Predicted best locations for bank branches using Python, R, and SQL.</p>
         <p class="skills">Skills: Python, R Studio, SQL, Financial Modeling, Geospatial Analysis</p>
+        <p class="project-extra">This project used a combination of customer behavior data and spatial clustering to identify under-served regions, guiding strategic expansion for a regional bank.</p>
       </div>
       <div class="project-card">
         <h3>Media Recommendation Engine</h3>
         <p>Built a universal recommender system using PyTorch and matrix factorization to suggest personalized content.</p>
         <p class="skills">Skills: PyTorch, Matrix Factorization, Data Pipelines, AI Personalization</p>
+        <p class="project-extra">The model generated personalized recommendations across books, movies, and music by analyzing interaction data and applying collaborative filtering techniques.</p>
       </div>
     </div>
   </section>
@@ -105,12 +116,14 @@
     });
 
     const scrollBtn = document.getElementById("scrollToTopBtn");
-    window.addEventListener("scroll", () => {
-      scrollBtn.style.display = window.scrollY > 300 ? "block" : "none";
-    });
-    scrollBtn.addEventListener("click", () => {
-      window.scrollTo({ top: 0, behavior: "smooth" });
-    });
+    if (scrollBtn) {
+      window.addEventListener("scroll", () => {
+        scrollBtn.style.display = window.scrollY > 300 ? "block" : "none";
+      });
+      scrollBtn.addEventListener("click", () => {
+        window.scrollTo({ top: 0, behavior: "smooth" });
+      });
+    }
   </script>
   <script src="script.js"></script>
 </body>
