--- a/index.html
+++ b/index.html
@@ -5,28 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Maria Contractor | Data Analyst</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    .typed-cursor {
-      font-weight: 300;
-      font-size: 1.2rem;
-      color: #3aa76d;
-      animation: blink 0.7s infinite;
-    }
-    @keyframes blink {
-      0%, 100% { opacity: 1; }
-      50% { opacity: 0; }
-    }
-    .project-extra {
-      display: none;
-      margin-top: 0.5rem;
-      font-size: 0.9rem;
-      color: #444;
-    }
-    .project-card.expanded .project-extra {
-      display: block;
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header id="home">
@@ -45,19 +24,19 @@
       <p class="tagline">Python | Power BI | SQL | R | AI | Visualization</p>
       <div>
         <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View Resume</a>
-        <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇</a>
+        <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇️</a>
       </div>
     </div>
   </header>
 
-  <section id="about" class="fade-in">
+  <section id="about" class="fade-in distinct-section">
     <h2>About Me</h2>
     <p>
       I'm a passionate Data Science student at UCF with a minor in Statistics. I thrive on transforming data into impactful solutions and currently work as an Operations Analyst Intern at BNY Mellon. I love using analytics to drive insight and creativity — whether it’s building interactive dashboards or modeling trends with code, I'm always exploring the intersection of logic and design.
     </p>
   </section>
 
-  <section id="experience" class="fade-in">
+  <section id="experience" class="fade-in distinct-section">
     <h2>Experience</h2>
     <div class="exp-card">
       <h3>Operations Analyst Intern – BNY Mellon</h3>
@@ -76,55 +55,32 @@
     </div>
   </section>
 
-  <section id="projects" class="fade-in">
+  <section id="projects" class="fade-in distinct-section">
     <h2>Projects</h2>
     <div class="project-grid">
       <div class="project-card">
         <h3>Branch Optimization Model</h3>
         <p>Predicted best locations for bank branches using Python, R, and SQL.</p>
         <p class="skills">Skills: Python, R Studio, SQL, Financial Modeling, Geospatial Analysis</p>
-        <p class="project-extra">This project used a combination of customer behavior data and spatial clustering to identify under-served regions, guiding strategic expansion for a regional bank.</p>
+        <p class="project-extra">This project combined customer data and spatial clustering to identify underserved regions and recommend optimal branch locations.</p>
       </div>
       <div class="project-card">
         <h3>Media Recommendation Engine</h3>
-        <p>Built a universal recommender system using PyTorch and matrix factorization to suggest personalized content.</p>
+        <p>Built a universal recommender system using PyTorch and matrix factorization.</p>
         <p class="skills">Skills: PyTorch, Matrix Factorization, Data Pipelines, AI Personalization</p>
-        <p class="project-extra">The model generated personalized recommendations across books, movies, and music by analyzing interaction data and applying collaborative filtering techniques.</p>
+        <p class="project-extra">The system generated personalized suggestions across media formats like movies, books, and music using collaborative filtering.</p>
       </div>
     </div>
   </section>
 
   <footer>
-    <p>© 2025 Maria Contractor |
-      <a href="https://github.com/mcont55" target="_blank">GitHub</a> |
-      <a href="mailto:macont55@gmail.com">Email</a> |
-      <a href="https://www.linkedin.com/in/maria-contractor" target="_blank">LinkedIn</a>
-    </p>
+    <p>© 2025 Maria Contractor | GitHub: <a href="https://github.com/mcont55" target="_blank">mcont55</a> | LinkedIn: <a href="https://www.linkedin.com/in/maria-contractor" target="_blank">maria-contractor</a><br>
+    Email: <strong>macont55@gmail.com</strong></p>
   </footer>
 
   <button id="scrollToTopBtn" title="Scroll to Top">↑</button>
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script>
-    new Typed('#typed', {
-      strings: ['Data Science Enthusiast', 'Creative Problem Solver', 'Visualization Junkie'],
-      typeSpeed: 50,
-      backSpeed: 30,
-      backDelay: 1800,
-      startDelay: 200,
-      loop: true
-    });
-
-    const scrollBtn = document.getElementById("scrollToTopBtn");
-    if (scrollBtn) {
-      window.addEventListener("scroll", () => {
-        scrollBtn.style.display = window.scrollY > 300 ? "block" : "none";
-      });
-      scrollBtn.addEventListener("click", () => {
-        window.scrollTo({ top: 0, behavior: "smooth" });
-      });
-    }
-  </script>
   <script src="script.js"></script>
 </body>
 </html>
