--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
   </section>
 
   <footer>
-    <p>© 2025 Maria Contractor | GitHub: <a href="https://github.com/mcont55" target="_blank">mcont55</a> | LinkedIn: <a href="https://www.linkedin.com/in/maria-contractor" target="_blank">maria-contractor</a><br>
-    Email: <strong>macont55@gmail.com</strong></p>
+    <p>© 2025 Maria Contractor | 
+      GitHub: <a href="https://github.com/mcont55" target="_blank">mcont55</a> | 
+      LinkedIn: <a href="https://www.linkedin.com/in/maria-contractor" target="_blank">maria-contractor</a><br>
+      Email: <strong><a href="mailto:macont55@gmail.com">macont55@gmail.com</a></strong>
+    </p>
   </footer>
 
   <button id="scrollToTopBtn" title="Scroll to Top">↑</button>
