--- a/index.html
+++ b/index.html
@@ -1,89 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maria Contractor | Data Analyst</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-</head>
-<body>
-  <header id="home">
-    <nav>
-      <div class="nav-left">Maria Contractor</div>
-      <ul class="nav-right">
-        <li><a href="#about">About</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#projects">Projects</a></li>
-      </ul>
-    </nav>
-    <div class="hero fade-in">
-      <img src="assets/profile.jpg" alt="Maria Contractor" class="profile-pic large">
-      <h1>Maria Contractor</h1>
-      <p class="tagline highlight"><span id="typed"></span></p>
-      <p class="tagline">Python | Power BI | SQL | R | AI | Visualization</p>
+<section id="experience" class="fade-in distinct-section">
+  <h2>Experience</h2>
+
+  <div class="exp-card">
+    <div class="exp-header">
+      <img src="assets/bny-logo.png" alt="BNY Mellon" class="exp-logo">
       <div>
-        <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View Resume</a>
-        <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇️</a>
+        <h3>BNY Mellon</h3>
+        <p class="exp-title">Operations Analyst Intern — May 2024 - Aug 2024</p>
       </div>
     </div>
-  </header>
-
-  <section id="about" class="fade-in distinct-section">
-    <h2>About Me</h2>
-    <p>
-      I'm a passionate Data Science student at UCF with a minor in Statistics. I thrive on transforming data into impactful solutions and currently work as an Operations Analyst Intern at BNY Mellon. I love using analytics to drive insight and creativity — whether it’s building interactive dashboards or modeling trends with code, I'm always exploring the intersection of logic and design.
-    </p>
-  </section>
-
-  <section id="experience" class="fade-in distinct-section">
-    <h2>Experience</h2>
-    <div class="exp-card">
-      <h3>Operations Analyst Intern – BNY Mellon</h3>
-      <p>Used Power BI and Microsoft Visio to optimize and automate global payment workflows.</p>
-      <p class="skills">Skills: Power BI, Workflow Mapping, Financial Systems, Operations Analytics</p>
+    <ul class="exp-list">
+      <li>Optimized and automated global payment workflows using Power BI and Microsoft Visio.</li>
+      <li>Built interactive dashboards to track operational KPIs and reduce manual reporting time.</li>
+      <li>Collaborated with cross-functional teams to ensure accurate financial reconciliation.</li>
+    </ul>
+    <div class="exp-tags">
+      <span>Power BI</span><span>Workflow Mapping</span><span>Financial Systems</span><span>Visio</span>
     </div>
-    <div class="exp-card">
-      <h3>Data Analytics RA – UCF</h3>
-      <p>Built a real-time contact tracking system with Power BI to support faculty engagement.</p>
-      <p class="skills">Skills: Power BI, Predictive Analytics, Real-Time Dashboards, Engagement Metrics</p>
-    </div>
-    <div class="exp-card">
-      <h3>Data & Research Intern – Limbitless Solutions</h3>
-      <p>Analyzed gamified training data for myoelectric prosthetics using R and wrote a manuscript on RL in educational gaming.</p>
-      <p class="skills">Skills: R, ggplot2, dplyr, Reinforcement Learning, Manuscript Writing</p>
-    </div>
-  </section>
+  </div>
 
-  <section id="projects" class="fade-in distinct-section">
-    <h2>Projects</h2>
-    <div class="project-grid">
-      <div class="project-card">
-        <h3>Branch Optimization Model</h3>
-        <p>Predicted best locations for bank branches using Python, R, and SQL.</p>
-        <p class="skills">Skills: Python, R Studio, SQL, Financial Modeling, Geospatial Analysis</p>
-        <p class="project-extra">This project combined customer data and spatial clustering to identify underserved regions and recommend optimal branch locations.</p>
-      </div>
-      <div class="project-card">
-        <h3>Media Recommendation Engine</h3>
-        <p>Built a universal recommender system using PyTorch and matrix factorization.</p>
-        <p class="skills">Skills: PyTorch, Matrix Factorization, Data Pipelines, AI Personalization</p>
-        <p class="project-extra">The system generated personalized suggestions across media formats like movies, books, and music using collaborative filtering.</p>
+  <div class="exp-card">
+    <div class="exp-header">
+      <img src="assets/ucf-logo.png" alt="UCF" class="exp-logo">
+      <div>
+        <h3>University of Central Florida</h3>
+        <p class="exp-title">Data Analytics Research Assistant — Jan 2023 - May 2024</p>
       </div>
     </div>
-  </section>
-
-  <footer>
-    <p>© 2025 Maria Contractor | 
-      GitHub: <a href="https://github.com/mcont55" target="_blank">mcont55</a> | 
-      LinkedIn: <a href="https://www.linkedin.com/in/maria-contractor" target="_blank">maria-contractor</a><br>
-      Email: <strong><a href="mailto:macont55@gmail.com">macont55@gmail.com</a></strong>
-    </p>
-  </footer>
-
-  <button id="scrollToTopBtn" title="Scroll to Top">↑</button>
-
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="script.js"></script>
-</body>
-</html>
+    <ul class="exp-list">
+      <li>Built a real-time contact tracking system in Power BI to support faculty engagement.</li>
+      <li>Analyzed engagement trends and delivered reports for strategic planning.</li>
+      <li>Developed predictive analytics models to forecast student participation.</li>
+    </ul>
+    <div class="exp-tags">
+      <span>Power BI</span><span>Predictive Analytics</span><span>Dashboards</span><span>Data Visualization</span>
+    </div>
+  </div>
+</section>
