--- a/index.html
+++ b/index.html
@@ -100,13 +100,17 @@
       <div class="project-card">
         <h3>Branch Optimization Model</h3>
         <p>Predicted best locations for bank branches using Python, R, and SQL.</p>
-        <p class="skills">Skills: Python, R Studio, SQL, Financial Modeling, Geospatial Analysis</p>
+        <div class="project-tags">
+          <span>Python</span><span>R Studio</span><span>SQL</span><span>Financial Modeling</span><span>Geospatial Analysis</span>
+        </div>
         <p class="project-extra">This project combined customer data and spatial clustering to identify underserved regions and recommend optimal branch locations.</p>
       </div>
       <div class="project-card">
         <h3>Media Recommendation Engine</h3>
         <p>Built a universal recommender system using PyTorch and matrix factorization.</p>
-        <p class="skills">Skills: PyTorch, Matrix Factorization, Data Pipelines, AI Personalization</p>
+        <div class="project-tags">
+          <span>PyTorch</span><span>Matrix Factorization</span><span>Data Pipelines</span><span>AI Personalization</span>
+        </div>
         <p class="project-extra">The system generated personalized suggestions across media formats like movies, books, and music using collaborative filtering.</p>
       </div>
     </div>
