--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
+  <!-- Scroll Progress Bar -->
+  <div id="scrollProgress"></div>
+
   <header id="home">
     <nav>
       <div class="nav-left">Maria Contractor</div>
@@ -53,7 +56,10 @@
         <li>Collaborated with cross-functional teams to ensure accurate financial reconciliation.</li>
       </ul>
       <div class="exp-tags">
-        <span>Power BI</span><span>Workflow Mapping</span><span>Financial Systems</span><span>Visio</span>
+        <span>Power BI</span>
+        <span>Workflow Mapping</span>
+        <span>Financial Systems</span>
+        <span>Visio</span>
       </div>
     </div>
 
@@ -71,7 +77,10 @@
         <li>Developed predictive analytics models to forecast student participation.</li>
       </ul>
       <div class="exp-tags">
-        <span>Power BI</span><span>Predictive Analytics</span><span>Dashboards</span><span>Data Visualization</span>
+        <span>Power BI</span>
+        <span>Predictive Analytics</span>
+        <span>Dashboards</span>
+        <span>Data Visualization</span>
       </div>
     </div>
 
@@ -89,7 +98,10 @@
         <li>Wrote a manuscript on reinforcement learning in educational gaming environments.</li>
       </ul>
       <div class="exp-tags">
-        <span>R</span><span>ggplot2</span><span>dplyr</span><span>Reinforcement Learning</span>
+        <span>R</span>
+        <span>ggplot2</span>
+        <span>dplyr</span>
+        <span>Reinforcement Learning</span>
       </div>
     </div>
   </section>
@@ -98,20 +110,41 @@
     <h2>Projects</h2>
     <div class="project-grid">
       <div class="project-card">
-        <h3>Branch Optimization Model</h3>
+        <h3><a href="https://github.com/mcont55/branch-optimization" target="_blank">Branch Optimization Model ↗</a></h3>
         <p>Predicted best locations for bank branches using Python, R, and SQL.</p>
         <div class="project-tags">
-          <span>Python</span><span>R Studio</span><span>SQL</span><span>Financial Modeling</span><span>Geospatial Analysis</span>
+          <span>Python</span>
+          <span>R Studio</span>
+          <span>SQL</span>
+          <span>Financial Modeling</span>
+          <span>Geospatial Analysis</span>
         </div>
         <p class="project-extra">This project combined customer data and spatial clustering to identify underserved regions and recommend optimal branch locations.</p>
+        <div class="click-hint">Click to expand ▼</div>
       </div>
       <div class="project-card">
-        <h3>Media Recommendation Engine</h3>
+        <h3><a href="https://github.com/mcont55/media-recommendation" target="_blank">Media Recommendation Engine ↗</a></h3>
         <p>Built a universal recommender system using PyTorch and matrix factorization.</p>
         <div class="project-tags">
-          <span>PyTorch</span><span>Matrix Factorization</span><span>Data Pipelines</span><span>AI Personalization</span>
+          <span>PyTorch</span>
+          <span>Matrix Factorization</span>
+          <span>Data Pipelines</span>
+          <span>AI Personalization</span>
         </div>
         <p class="project-extra">The system generated personalized suggestions across media formats like movies, books, and music using collaborative filtering.</p>
+        <div class="click-hint">Click to expand ▼</div>
+      </div>
+      <div class="project-card">
+        <h3><a href="https://github.com/mcont55/churn-predictor" target="_blank">Customer Churn Predictor ↗</a></h3>
+        <p>Developed a machine learning model to predict churn and retain high-value customers.</p>
+        <div class="project-tags">
+          <span>Python</span>
+          <span>Scikit-Learn</span>
+          <span>Classification</span>
+          <span>Data Cleaning</span>
+        </div>
+        <p class="project-extra">Used logistic regression and gradient boosting to identify churn drivers and improve retention strategy by 12%.</p>
+        <div class="click-hint">Click to expand ▼</div>
       </div>
     </div>
   </section>
