--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <!-- Scroll Progress Bar -->
-  <div id="scrollProgress"></div>
-
   <header id="home">
     <nav>
       <div class="nav-left">Maria Contractor</div>
@@ -83,6 +80,27 @@
         <span>Data Visualization</span>
       </div>
     </div>
+
+    <div class="exp-card">
+      <div class="exp-header">
+        <img src="assets/limbitless-logo.png" alt="Limbitless Solutions" class="exp-logo">
+        <div>
+          <h3>Limbitless Solutions</h3>
+          <p class="exp-title">Data & Research Intern — Aug 2022 - Dec 2022</p>
+        </div>
+      </div>
+      <ul class="exp-list">
+        <li>Analyzed gamified training data for myoelectric prosthetics using R.</li>
+        <li>Created interactive visualizations and statistical reports for research publications.</li>
+        <li>Wrote a manuscript on reinforcement learning in educational gaming environments.</li>
+      </ul>
+      <div class="exp-tags">
+        <span>R</span>
+        <span>ggplot2</span>
+        <span>dplyr</span>
+        <span>Reinforcement Learning</span>
+      </div>
+    </div>
   </section>
 
   <section id="projects" class="fade-in distinct-section">
@@ -98,13 +116,8 @@
           <span>Financial Modeling</span>
           <span>Geospatial Analysis</span>
         </div>
-        <p class="project-extra">
-          This project combined customer data and spatial clustering to identify underserved regions and recommend optimal branch locations.
-          <br><br>
-          <a href="https://github.com/mcont55/branch-optimization" target="_blank" class="project-link">View Project ↗</a>
-        </p>
+        <p class="project-extra">This project combined customer data and spatial clustering to identify underserved regions and recommend optimal branch locations.</p>
       </div>
-
       <div class="project-card">
         <h3>Media Recommendation Engine</h3>
         <p>Built a universal recommender system using PyTorch and matrix factorization.</p>
@@ -114,25 +127,7 @@
           <span>Data Pipelines</span>
           <span>AI Personalization</span>
         </div>
-        <p class="project-extra">
-          The system generated personalized suggestions across media formats like movies, books, and music using collaborative filtering.
-          <br><br>
-          <a href="https://github.com/mcont55/media-recommendation" target="_blank" class="project-link">View Project ↗</a>
-        </p>
-      </div>
-
-      <div class="project-card">
-        <h3>Customer Churn Predictor</h3>
-        <p>Developed a machine learning model to predict churn and retain high-value customers.</p>
-        <div class="project-tags">
-          <span>Python</span>
-          <span>Scikit-Learn</span>
-          <span>Classification</span>
-          <span>Data Cleaning</span>
-        </div>
-        <p class="project-extra">
-          Used logistic regression and gradient boosting to identify churn drivers and improve retention strategy by 12%.
-        </p>
+        <p class="project-extra">The system generated personalized suggestions across media formats like movies, books, and music using collaborative filtering.</p>
       </div>
     </div>
   </section>
@@ -147,7 +142,6 @@
 
   <button id="scrollToTopBtn" title="Scroll to Top">↑</button>
 
-  <!-- Typed.js for animated tagline -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="script.js"></script>
 </body>
