--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
           <span>Geospatial Analysis</span>
         </div>
         <p class="project-extra">This project combined customer data and spatial clustering to identify underserved regions and recommend optimal branch locations.</p>
+        <div class="click-hint">Click to expand ▼</div>
       </div>
       <div class="project-card">
         <h3>Media Recommendation Engine</h3>
@@ -128,6 +129,19 @@
           <span>AI Personalization</span>
         </div>
         <p class="project-extra">The system generated personalized suggestions across media formats like movies, books, and music using collaborative filtering.</p>
+        <div class="click-hint">Click to expand ▼</div>
+      </div>
+      <div class="project-card">
+        <h3>Customer Churn Predictor</h3>
+        <p>Developed a machine learning model to predict churn and retain high-value customers.</p>
+        <div class="project-tags">
+          <span>Python</span>
+          <span>Scikit-Learn</span>
+          <span>Classification</span>
+          <span>Data Cleaning</span>
+        </div>
+        <p class="project-extra">Used logistic regression and gradient boosting to identify churn drivers and improve retention strategy by 12%.</p>
+        <div class="click-hint">Click to expand ▼</div>
       </div>
     </div>
   </section>
