--- a/index.html
+++ b/index.html
@@ -39,8 +39,41 @@
   <section id="experience" class="distinct-section">
     <h2>Experience</h2>
 
-    <!-- Experience Cards Same As Before -->
-    <!-- ... -->
+    <div class="exp-card">
+      <div class="exp-header">
+        <img src="assets/bny-logo.png" alt="BNY Mellon" class="exp-logo">
+        <div class="exp-info">
+          <h3>BNY Mellon</h3>
+          <p class="exp-title">Operations Analyst Intern — May 2024 - Aug 2024</p>
+        </div>
+      </div>
+      <ul class="exp-list">
+        <li>Optimized and automated global payment workflows using Power BI and Microsoft Visio.</li>
+        <li>Built interactive dashboards to track operational KPIs and reduce manual reporting time.</li>
+        <li>Collaborated with cross-functional teams to ensure accurate financial reconciliation.</li>
+      </ul>
+      <div class="skill-tags">
+        <span>Power BI</span><span>Workflow Mapping</span><span>Financial Systems</span><span>Visio</span>
+      </div>
+    </div>
+
+    <div class="exp-card">
+      <div class="exp-header">
+        <img src="assets/ucf-logo.png" alt="UCF" class="exp-logo">
+        <div class="exp-info">
+          <h3>University of Central Florida</h3>
+          <p class="exp-title">Data Analytics Research Assistant — Jan 2023 - May 2024</p>
+        </div>
+      </div>
+      <ul class="exp-list">
+        <li>Built a real-time contact tracking system in Power BI to support faculty engagement.</li>
+        <li>Analyzed engagement trends and delivered reports for strategic planning.</li>
+        <li>Developed predictive analytics models to forecast student participation.</li>
+      </ul>
+      <div class="skill-tags">
+        <span>Power BI</span><span>Predictive Analytics</span><span>Dashboards</span><span>Data Visualization</span>
+      </div>
+    </div>
   </section>
 
   <section id="projects" class="distinct-section">
@@ -54,8 +87,7 @@
         </div>
         <p class="project-extra">
           This project combined customer data and spatial clustering to identify underserved regions and recommend optimal branch locations.
-          <br>
-          <a href="#" class="project-link" target="_blank">View Project</a>
+          <br><a href="#" class="project-link" target="_blank">View Project</a>
         </p>
         <div class="click-hint">Click to see more</div>
       </div>
@@ -68,8 +100,7 @@
         </div>
         <p class="project-extra">
           The system generated personalized suggestions across media formats like movies, books, and music using collaborative filtering.
-          <br>
-          <a href="https://github.com/mcont55" class="project-link" target="_blank">View Project</a>
+          <br><a href="https://github.com/mcont55" class="project-link" target="_blank">View Project</a>
         </p>
         <div class="click-hint">Click to see more</div>
       </div>
