--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Maria Contractor | Data Analyst</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=3" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
@@ -17,7 +17,7 @@
         <li><a href="#projects">Projects</a></li>
       </ul>
     </nav>
-    <div class="hero">
+    <div class="hero fade-in">
       <img src="assets/profile.jpg" alt="Maria Contractor" class="profile-pic large">
       <h1>Maria Contractor</h1>
       <p class="tagline highlight"><span id="typed"></span></p>
@@ -29,14 +29,14 @@
     </div>
   </header>
 
-  <section id="about" class="distinct-section">
+  <section id="about" class="distinct-section fade-in">
     <h2>About Me</h2>
     <p>
       I'm a passionate Data Science student at UCF with a minor in Statistics. I thrive on transforming data into impactful solutions and currently work as an Operations Analyst Intern at BNY Mellon. I love using analytics to drive insight and creativity — whether it’s building interactive dashboards or modeling trends with code, I'm always exploring the intersection of logic and design.
     </p>
   </section>
 
-  <section id="experience" class="distinct-section">
+  <section id="experience" class="distinct-section fade-in">
     <h2>Experience</h2>
 
     <div class="exp-card">
@@ -76,10 +76,10 @@
     </div>
   </section>
 
-  <section id="projects" class="distinct-section">
+  <section id="projects" class="distinct-section fade-in">
     <h2>Projects</h2>
     <div class="project-grid">
-      <div class="project-card" data-link="">
+      <div class="project-card">
         <h3>Branch Optimization Model</h3>
         <p>Predicted best locations for bank branches using Python, R, and SQL.</p>
         <div class="skill-tags">
@@ -92,7 +92,7 @@
         <div class="click-hint">Click to see more</div>
       </div>
 
-      <div class="project-card" data-link="https://github.com/mcont55">
+      <div class="project-card">
         <h3>Media Recommendation Engine</h3>
         <p>Built a universal recommender system using PyTorch and matrix factorization.</p>
         <div class="skill-tags">
@@ -118,6 +118,6 @@
   <button id="scrollToTopBtn" title="Scroll to Top">↑</button>
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="script.js"></script>
+  <script src="script.js?v=3"></script>
 </body>
 </html>
