--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Maria Contractor | Data Analyst</title>
-  <link rel="stylesheet" href="style.css?v=3" />
+  <link rel="stylesheet" href="style.css?v=4" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
@@ -22,7 +22,7 @@
       <h1>Maria Contractor</h1>
       <p class="tagline highlight"><span id="typed"></span></p>
       <p class="tagline">Python | Power BI | SQL | R | AI | Visualization</p>
-      <div>
+      <div class="resume-container">
         <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View Resume</a>
         <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇️</a>
       </div>
@@ -118,6 +118,6 @@
   <button id="scrollToTopBtn" title="Scroll to Top">↑</button>
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="script.js?v=3"></script>
+  <script src="script.js?v=4"></script>
 </body>
 </html>
