--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Maria Contractor | Data Analyst</title>
-  <link rel="stylesheet" href="style.css?v=4" />
+  <link rel="stylesheet" href="style.css?v=5" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
@@ -82,7 +82,7 @@
       <div class="project-card">
         <h3>Branch Optimization Model</h3>
         <p>Predicted best locations for bank branches using Python, R, and SQL.</p>
-        <div class="skill-tags">
+        <div class="skill-tags left-align">
           <span>Python</span><span>R Studio</span><span>SQL</span><span>Financial Modeling</span><span>Geospatial Analysis</span>
         </div>
         <p class="project-extra">
@@ -95,7 +95,7 @@
       <div class="project-card">
         <h3>Media Recommendation Engine</h3>
         <p>Built a universal recommender system using PyTorch and matrix factorization.</p>
-        <div class="skill-tags">
+        <div class="skill-tags left-align">
           <span>PyTorch</span><span>Matrix Factorization</span><span>Data Pipelines</span><span>AI Personalization</span>
         </div>
         <p class="project-extra">
@@ -118,6 +118,6 @@
   <button id="scrollToTopBtn" title="Scroll to Top">↑</button>
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="script.js?v=4"></script>
+  <script src="script.js?v=5"></script>
 </body>
 </html>
