--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <p class="tagline">Python | Power BI | SQL | R | AI | Visualization</p>
       <div class="resume-container">
         <a href="assets/maria_resume.pdf" class="resume-button" target="_blank">View Resume</a>
-        <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇️</a>
+        <a href="assets/maria_resume.pdf" class="resume-download-icon" download title="Download Resume">⬇</a>
       </div>
     </div>
   </header>
@@ -41,9 +41,9 @@
 
     <div class="exp-card">
       <div class="exp-header">
-        <img src="assets/bny-logo.png" alt="BNY Mellon" class="exp-logo">
+        <img src="assets/bny-logo.jpg" alt="BNY" class="exp-logo">
         <div class="exp-info">
-          <h3>BNY Mellon</h3>
+          <h3>BNY</h3>
           <p class="exp-title">Operations Analyst Intern — May 2024 - Aug 2024</p>
         </div>
       </div>
